--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script>
+        <script defer src="script.js"></script>
     </head>
 
     <body>
 
-
+        <div class="grid"></div>
 
     </body>
 </html>
