Change styles to resemble an etch-a-sketch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <button name="new-grid-btn">New Grid</button>
+        <button name="new-grid-btn">New Sketch</button>
         <div class="grid"></div>
 
     </body>
